--- a/Natours/sass/components/_story.scss
+++ b/Natours/sass/components/_story.scss
@@ -34,19 +34,25 @@
         width: 15rem;
         height: 15rem;
         float: left; // in roder to make the rest of the content floar around it
+        overflow: hidden;
+        border-radius: 50%;
 
-        -webkit-shape-outside: circle(50% at 50% 50%);
-        shape-outside: circle(50% at 50% 50%); // radius at x y
-        /* 
-            defines where the content flows around the element
-            50% => radius = half of height and width = 7.5rem 
-            50% 50% - exaclty at the center of the circle (x y)
-            we need to use float, we have to set the height and the width in order to work
-        */
-
-        -webkit-clip-path: circle(50% at 50% 50%);
-        clip-path: circle(50% at 50% 50%);
-        // this will make the element to have a form of a circle
+        
+        @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+            border-radius: unset;
+            -webkit-shape-outside: circle(50% at 50% 50%);
+            shape-outside: circle(50% at 50% 50%); // radius at x y
+            /* 
+                defines where the content flows around the element
+                50% => radius = half of height and width = 7.5rem 
+                50% 50% - exaclty at the center of the circle (x y)
+                we need to use float, we have to set the height and the width in order to work
+            */
+    
+            -webkit-clip-path: circle(50% at 50% 50%);
+            clip-path: circle(50% at 50% 50%);
+            // this will make the element to have a form of a circle
+        }
 
         transform: translateX(-3rem) skewX(12deg); // in order to have more space between the circle and the text => also need to add 3 more rem to the left padding
 
