--- a/Natours/sass/layout/_header.scss
+++ b/Natours/sass/layout/_header.scss
@@ -23,9 +23,9 @@
       the width is larger than 2000px
       load the larger image for the background
       -webkit-min-device-pixel-ratio: 2 => for browsers that doesn't support min-resolution */
-    @media (min-resolution: 192dpi) and (min-width: 37.5em), 
-          (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-          (min-width: 125em) {
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), 
+           only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+           only screen and (min-width: 125em) {
           background-image: linear-gradient(to right bottom, rgba($color-secondary-light, 0.8), rgba($color-secondary-dark, 0.8)), url(../img/hero.jpg);
     }
 
