building the hotel overview part 1

--- a/Trillo/sass/_components.scss
+++ b/Trillo/sass/_components.scss
@@ -183,3 +183,50 @@
   text-align: center;
   padding: 2.5rem;
 }
+
+/////////////////////////////////
+// GALLERY
+.gallery {
+  display: flex;
+  &__photo {
+    width: 100%;
+    display: block; // an image should always be a block/inline-block if we don't want the white-space
+  }
+}
+
+/////////////////////////////////
+// OVERVIEW
+.overview {
+  display: flex;
+
+  &__heading {
+
+  }
+
+  &__stars {
+    // flex: 1;
+    margin-right: auto; // teh element occupy only the space it needs, and is not extending to the rifgt 
+  }
+
+  &__icon-star,
+  &__icon-location {
+      width: 1.75rem;
+      height: 1.75rem;
+      fill: var(--color-primary);
+  }
+
+  &__location {
+  }
+
+  &__rating {
+
+  }
+
+  &__rating-average {
+
+  }
+
+  &__rating-count {
+
+  }
+}
