--- a/Trillo/sass/_components.scss
+++ b/Trillo/sass/_components.scss
@@ -14,6 +14,12 @@
   align-items: center;
   justify-content: center;
 
+  @media only screen and (max-width: $bp-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+  }
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -182,6 +188,11 @@
         justify-content: center;
         padding: 2rem;
     }
+
+    @media only screen and (max-width: $bp-small) {
+     flex-direction: column;
+     padding: 1.5rem .5rem;
+    }
   }
 
   &__icon {
@@ -189,6 +200,13 @@
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor; // the current color of the current/parent element
+
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      margin-bottom: .7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 
 }
@@ -228,6 +246,11 @@
     font-weight: 300;
     text-transform: uppercase;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      padding: 1,25rem 2rem;
+    }
   }
 
   &__stars {
@@ -263,17 +286,29 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1.5rem;
+    }
   }
 
   &__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -3px;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+    }
   }
 
   &__rating-count {
     font-size: .8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: .5rem;
+    }
   }
 }
 
