example of browser support for grid

--- a/Nexter/sass/_features.scss
+++ b/Nexter/sass/_features.scss
@@ -3,15 +3,28 @@
 
   margin: 15rem 0;
 
-  display: grid; // a subgrid - allowing a grid that is inside a grid to snap its tracks to the parent grid
-  // grid-template-columns: repeat(3, 1fr);
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  // auto-fit: it creates as many track as can fit based on the width defined
-  gap: 6rem;
-  align-items: start; // now all the first rows of each feature grid is equal in height
+  
+  @supports(display: grid) {
+    display: grid; // a subgrid - allowing a grid that is inside a grid to snap its tracks to the parent grid
+    // grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    // auto-fit: it creates as many track as can fit based on the width defined
+    gap: 6rem;
+    align-items: start; // now all the first rows of each feature grid is equal in height
+  }
 }
 
 .feature {
+  float: left;
+  width: 33.3333%;
+  margin-bottom: 6rem;
+
+  @supports(display: grid) {
+    width: auto;
+    margin-bottom: 0;
+    // the float will be ingnored
+  }
+
   display: grid;
   grid-template-columns: min-content 1fr;
   row-gap: 1.5rem;
